force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/KimbleOne__ResourcedActivityTemplate__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Resourced Activity Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resourced Activity Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>