force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__ActualiseForecastOnly__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActualiseForecastOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualise Forecast Only?</label>
    <type>Checkbox</type>
</CustomField>