force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__AllowFrameworkAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowFrameworkAssignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Framework Assignment</label>
    <type>Checkbox</type>
</CustomField>