force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__CalendarIsPrivate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CalendarIsPrivate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calendar Is Private</label>
    <type>Checkbox</type>
</CustomField>