force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__CanSelfForecast__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CanSelfForecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Self Forecast?</label>
    <type>Checkbox</type>
</CustomField>