force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__DefaultUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultUsage__c</fullName>
    <label>Z_Obsolete - Default Usage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>