force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__ForecastUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastUnitType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Forecast Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Resourced Activity Templates (Forecast Unit Type)</relationshipLabel>
    <relationshipName>ResourcedActivityTemplatesForecast</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>