force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__HasCases__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasCases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Cases?</label>
    <type>Checkbox</type>
</CustomField>