force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__HasExternalPlan__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HasExternalPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has External Plan</label>
    <type>Checkbox</type>
</CustomField>