force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__HideForecastTimeEntries__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__HideForecastTimeEntries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Forecast Time Entries</label>
    <type>Checkbox</type>
</CustomField>