force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__InvoicingUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingUnitType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoicing Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Resourced Activity Templates (Invoicing Unit Type)</relationshipLabel>
    <relationshipName>ResourcedActivityTemplatesInvoicing</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>