force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__ResourcedActivityType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivityType__c</fullName>
    <label>Resourced Activity Type</label>
    <referenceTo>KimbleOne__ResourcedActivityType__c</referenceTo>
    <relationshipName>ResourcedActivityTemplate</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>