force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__RevenueEntryUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueEntryUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Entry Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Resourced Activity Templates (Revenue Entry Unit Type)</relationshipLabel>
    <relationshipName>ResourcedActivityTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>