force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__SelfForecastApprovalRequired__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SelfForecastApprovalRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Required?</label>
    <type>Checkbox</type>
</CustomField>