force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__UsageAllocationType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageAllocationType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Usage Allocation Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>UsageAllocationType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Resourced Activity Templates (Usage Allocation Type)</relationshipLabel>
    <relationshipName>ResourcedActivityTemplates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>