force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__UsageForecastFormat__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageForecastFormat__c</fullName>
    <label>Z_Obsolete - Usage Forecast Format</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>