force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__UsageTrackingModel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageTrackingModel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Usage Tracking Model</label>
    <referenceTo>KimbleOne__UsageTrackingModel__c</referenceTo>
    <relationshipLabel>Resourced Activity Templates</relationshipLabel>
    <relationshipName>ResourcedActivityTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>