force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__UsageUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageUnitType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Usage Unit Type</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Resourced Activity Templates (Usage Unit Type)</relationshipLabel>
    <relationshipName>ResourcedActivityTemplate</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>