force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__UtilisationRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UtilisationRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utilisation Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>UtilisationRule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipName>ResourcedActivityTemplateUtilisationRule</relationshipName>
    <type>Lookup</type>
</CustomField>