force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__WorkItemLevel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__WorkItemLevel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Item Level</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>WorkItemLevel</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Resourced Activity Templates (Work Item Level)</relationshipLabel>
    <relationshipName>ResourcedActivityTemplatesWorkItemLevel</relationshipName>
    <type>Lookup</type>
</CustomField>