force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/fields/KimbleOne__WorkItemUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__WorkItemUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Item Units</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Resourced Activity Templates (Work Item Units)</relationshipLabel>
    <relationshipName>ResActivityTemplatesWorkItemUnitType</relationshipName>
    <type>Lookup</type>
</CustomField>