force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/validationRules/KimbleOne__ForecastUnitTypeMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__ForecastUnitTypeMandatory</fullName>
    <active>true</active>
    <description>Forecast Unit Type is Mandatory</description>
    <errorConditionFormula>ISBLANK(KimbleOne__ForecastUnitType__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__ForecastUnitType__c</errorDisplayField>
    <errorMessage>Forecast Unit Type must be entered</errorMessage>
</ValidationRule>