force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/validationRules/KimbleOne__UsageAllocationType_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__UsageAllocationType_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( KimbleOne__UsageAllocationType__c )</errorConditionFormula>
    <errorMessage>ERROR:UsageAllocationType_Is_Mandatory</errorMessage>
</ValidationRule>