force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/validationRules/KimbleOne__UsageAllocationTypeMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__UsageAllocationTypeMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(KimbleOne__UsageAllocationType__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__UsageAllocationType__c</errorDisplayField>
    <errorMessage>Usage Allocation Type must be entered</errorMessage>
</ValidationRule>