force-app/main/default/objects/KimbleOne__ResourcedActivityTemplate__c/validationRules/KimbleOne__UsageUnitTypeMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__UsageUnitTypeMandatory</fullName>
    <active>true</active>
    <description>Usage Unit Type is Mandatory</description>
    <errorConditionFormula>ISBLANK(KimbleOne__UsageUnitType__c)</errorConditionFormula>
    <errorDisplayField>KimbleOne__UsageUnitType__c</errorDisplayField>
    <errorMessage>Usage Unit Type must be entered</errorMessage>
</ValidationRule>